--- a/style.css
+++ b/style.css
@@ -35,9 +35,13 @@ body {
 /* Début de la div sidebar_content */
 
 #sidebar_content {
-  background-color: none;
   margin-top: 10%;
   color: white;
+}
+
+.food {
+  color: white;
+  font-size: 18px;
 }
 
 .vin {
@@ -56,7 +60,15 @@ body {
 #sidebar_content2 {
   background-color: none;
   color: white;
-  margin-top: 40%;
+  margin-top: 24%;
+}
+
+#sidebar_content3 {
+  margin-top: 20%;
+}
+
+#sidebar_content3 ul {
+  color: white;
 }
 
 .cru {
@@ -267,7 +279,7 @@ h5, .container p {
 .container2 {
   padding: 20px;
   width: 50%;
-  margin-top: 6%;
+  margin-top: 5%;
   margin-left: 24%;
   border: solid 1px white;
 }
@@ -339,7 +351,9 @@ h5, .container p {
 /* Début de la div ouvrir */
 
 #ouvrir {
-  background-color: #9E0E40;
+  /*background-color: #9E0E40;*/
+  background-image: url(Images/wine_view.jpg);
+  background-size: cover;
   height: 200px;
   width: 24%;
 }
@@ -349,7 +363,9 @@ h5, .container p {
 /* Début de la div ouvrir2 */
 
 #ouvrir2 {
-  background-color: #9E0E40;
+  /*background-color: #9E0E40;*/
+  background-image: url(Images/table.jpg);
+  background-size: cover;
   height: 200px;
   width: 24%;
   margin-left: 26%;
