--- a/style2.css
+++ b/style2.css
@@ -172,6 +172,10 @@ body {
   color: white;
 }
 
+.active:hover {
+  background-image: url(Images/logoWWW.png);
+}
+
 .topnav .icon {
   display: none;
 }
@@ -286,16 +290,17 @@ h4 {
 
 /* Début du Footer */
 
-footer {
+footer#mentions{
   position: fixed;
   left: 0;
-  bottom: 0;
+  bottom: 0px;
   width: 100%;
   background-color: #9E0E40;
-  height: 4%;
   color: white;
   text-align: center;
-  padding-top: 1%;
+  padding-top: 20px;
+  text-decoration: none;
+  padding-bottom: 20px;
 }
 
 /* Fin du Footer */
